# skz-pace

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  Makefile  README.md  compose.yaml  compose.yml  db_connection_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: 1.0-yt-raw-extraction.yml  raw_metadata_extraction.yml
dags/: skz_pace_data_pipeline.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-data-acquisition-and-preparation.ipynb  1.0-data-acquisition.ipynb  1.0-yt-data-acquisition.ipynb  2.0-yt-sentiment-model-evaluation.ipynb  3.0-yt-exploratory-data-analysis.ipynb
queries/: 1.0-cloud-db-setup.sql  1.0-local-db-setup.sql  1.0-yt-cloud-db-setup.sql  1.0-yt-db-setup.sql  1.0-yt-raw-db-setup.sql  2.0-yt-transformed-db-setup.sql  3.0-yt-feature-engineering.sql
references/: 1.0-yt-project-management.md  2.0-yt-project-organization.md  skz-pace-project-management.md  skz_data_dictionary.html
reports/dashboards/: SKZ PACE Dashboard.pbix
scripts/: main.py
src/: config.py  dataset.py  features.py  process.py  seed_db.py
src/analyses/: sentiment.py
src/db/: connection.py  storage.py
src/etl/: fetch_comments.py  fetch_metadata.py  fetch_snippets.py  fetch_stats.py  fetch_top_comments.py  fetch_transcripts.py  load_to_db.py  raw_metadata.py  synchronization.py  youtube_auth.py
src/evaluation/: metrics.py
src/extraction/: raw_metadata.py  synchronization.py
src/gdrive/: authentication.py  storage.py
src/load/db/: connection.py  storage.py
src/load/gdrive/: authentication.py  file_management.py  storage.py
src/modeling/: fine_tune.py
src/transformation/: fetch_snippets.py  fetch_stats.py  fetch_top_comments.py  fetch_transcripts.py
