[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Stray Kids Predictive Analytics and Content Ecosystem"
authors = [
  { name = "Yusuf Tejakusumah" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "connectorx>=0.4.5",
    "google-api-python-client>=2.192.0",
    "ipykernel>=7.2.0",
    "loguru",
    "mkdocs",
    "pandas>=3.0.1",
    "pip",
    "polars-lts-cpu>=1.33.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "python-dotenv",
    "ruff",
    "sqlalchemy>=2.0.49",
    "tqdm",
    "typer",
    "youtube-transcript-api>=1.2.4",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

