[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Stray Kids Predictive Analytics and Content Ecosystem"
authors = [
  { name = "Yusuf Tejakusumah" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "connectorx>=0.4.5",
    "fasttext-wheel>=0.9.2",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "huggingface-hub>=1.17.0",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "pendulum>=3.2.0",
    "pip>=26.0.1",
    "polars-lts-cpu>=1.33.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.6",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "typer>=0.24.1",
    "youtube-transcript-api>=1.2.4",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

